Versuch von Windows Anmeldung

--- a/LiveCodingChat/LiveCodingChat.csproj
+++ b/LiveCodingChat/LiveCodingChat.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Livecoding\WinLiveLogin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpHelper.cs" />
@@ -63,8 +64,5 @@
     <Compile Include="Livecoding\LoginFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="Xmpp\" />
-    <Folder Include="Livecoding\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
