Excluded obj Folder

--- a/NeinTom/NeinTom.csproj
+++ b/NeinTom/NeinTom.csproj
@@ -88,4 +88,8 @@
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="obj\x86\Debug\" />
+  </ItemGroup>
 </Project>
