Revert "Revert "Versuch von Windows Anmeldung""
This reverts commit beb339305a42d4d170d315c6fd41503ab15062bc.

--- a/LiveCodingChat/LiveCodingChat.csproj
+++ b/LiveCodingChat/LiveCodingChat.csproj
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Livecoding\WinLiveLogin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpHelper.cs" />
