--- a/NeinTom/NeinTom.csproj
+++ b/NeinTom/NeinTom.csproj
@@ -20,7 +20,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
@@ -36,41 +36,32 @@
     <Compile Include="ChatControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ChatControl.Designer.cs">
-      <DependentUpon>ChatControl.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ChatControl.Designer.cs" />
     <Compile Include="frmChat.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmChat.Designer.cs">
-      <DependentUpon>frmChat.cs</DependentUpon>
-    </Compile>
+    <Compile Include="frmChat.Designer.cs" />
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmLogin.Designer.cs">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </Compile>
+    <Compile Include="frmLogin.Designer.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmMain.Designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
-    </Compile>
+    <Compile Include="frmMain.Designer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="CustomTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ChatLog.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ChatMessage.cs" />
-    <Compile Include="CircularBuffer.cs" />
-    <Compile Include="MessageInfo.cs" />
+    <Compile Include="ChatLog\ChatLog.cs" />
+    <Compile Include="ChatLog\CircularBuffer.cs" />
+    <Compile Include="ChatLog\ChatMessage.cs" />
+    <Compile Include="ChatLog\ChatMessagePart.cs" />
+    <Compile Include="ChatLog\TextPart.cs" />
+    <Compile Include="ChatLog\ContainerPart.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net" />
     <Reference Include="System.Windows.Forms" />
@@ -83,11 +74,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ChatControl.resx">
-      <DependentUpon>ChatControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmLogin.resx">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="ChatLog\" />
   </ItemGroup>
 </Project>
