--- a/LiveCodingChat/LiveCodingChat.csproj
+++ b/LiveCodingChat/LiveCodingChat.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Livecoding\YahooLogin.cs" />
     <Compile Include="Livecoding\FacebookLogin.cs" />
     <Compile Include="Livecoding\LoginFactory.cs" />
+    <Compile Include="Livecoding\LoginEventArgs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
